# channeled-dashboard

./: .editorconfig  .eslintrc  .gitignore  .gitlab-ci.yml  LICENSE  Pipfile  README.rst  package.json  requirements.txt  setup.cfg  tox.ini
_javascript/: dashboard.js  functions.js
_sass/: main.scss
dashboard/: manage.py
dashboard/dashboard/: asgi.py  forms.py  routing.py  settings.py  urls.py  wsgi.py
dashboard/documents/: admin.py  apps.py  bindings.py  consumers.py  forms.py  models.py  routing.py  tests.py  urls.py  views.py
dashboard/documents/migrations/: 0001_initial.py  0002_auto_20180414_1230.py
dashboard/documents/templates/documents/: base.html  document_detail.html  document_form.html  document_list.html
dashboard/documents/templates/documents/includes/: clearable_file_input.html  document_list_item.html  field.html
dashboard/static/css/: main.css
dashboard/static/js/: dashboard.js  functions.js
dashboard/templates/: base.html
dashboard/templates/registration/: login.html
