[flake8]
max-line-length = 119
exclude = .tox,.env,node_modules,manage.py,settings.py,migrations,wsgi.py

[metadata]
license-file = LICENSE

[wheel]
universal = 1

[isort]
line_length = 119
skip = .tox,.env,node_modules,manage.py,settings.py,migrations,wsgi.py
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = dashboard,documents
multi_line_output = 5
not_skip = __init__.py
